[gd_scene load_steps=7 format=3 uid="uid://bdp5pr6dqwvvi"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_1mr1p"]
[ext_resource type="Texture2D" uid="uid://cie1duphvmead" path="res://assets/ui_icons/map-editor/straight_road_tool.png" id="2_mhbpk"]
[ext_resource type="Script" uid="uid://b28tw1ei7daex" path="res://ui/views/map-editor/road-tool-panel/road_tool_panel.gd" id="2_ym22e"]
[ext_resource type="Texture2D" uid="uid://6wyw68jy7pt5" path="res://assets/ui_icons/map-editor/curve_road_tool.png" id="3_a1lqm"]
[ext_resource type="Texture2D" uid="uid://di5o8wo5nrqtr" path="res://assets/ui_icons/chevron_down.png" id="4_a1lqm"]

[sub_resource type="LabelSettings" id="LabelSettings_1mr1p"]
font_size = 12

[node name="RoadToolPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -915.0
offset_bottom = -539.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_1mr1p")
script = ExtResource("2_ym22e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="MainContent" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
vertical = true

[node name="Label" type="Label" parent="MarginContainer/MainContent"]
layout_mode = 2
text = "Road Type:"
label_settings = SubResource("LabelSettings_1mr1p")

[node name="TypesContainer" type="BoxContainer" parent="MarginContainer/MainContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StraightToolButton" type="Button" parent="MarginContainer/MainContent/TypesContainer"]
layout_mode = 2
tooltip_text = "Straight Road"
focus_mode = 0
icon = ExtResource("2_mhbpk")

[node name="CurveToolButton" type="Button" parent="MarginContainer/MainContent/TypesContainer"]
layout_mode = 2
tooltip_text = "Curved Road"
focus_mode = 0
icon = ExtResource("3_a1lqm")

[node name="HideButtonWrapper" type="BoxContainer" parent="MarginContainer/MainContent"]
layout_mode = 2

[node name="HidePanelButton" type="Button" parent="MarginContainer/MainContent/HideButtonWrapper"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Hide panel"
focus_mode = 0
icon = ExtResource("4_a1lqm")
flat = true
expand_icon = true
